--- a/content/modules/ROOT/pages/module-03.adoc
+++ b/content/modules/ROOT/pages/module-03.adoc
@@ -1,138 +1,95 @@
-= Managing an Application from GitHub
+== Scan and generate a report
 
-In the first half of this workshop, we packaged an application into this portable container format manually using rpms.
-In the second half, we will consider that you may want to manage software from GitHub or some kind of software versioning application.
-Rather than installing rpms, we have individual software files and pull them out of that version control into a group of systems.
+A XCCDF document is a structured collection of security configuration
+rules for some set of target system. In this case, it has the
+configuration rules that meet the PCI regulation.
 
-== Install RHEL 8 UBI
+To start scanning using OpenSCAP, use the _oscap xccdf eval_ command
+with the profile Id, option to fetch remote resources, output XML
+results file, and the datastream file.
 
-In this lab, we will be using a different Red Hat Enterprise Linux version in my container. 
+....
+oscap xccdf eval --fetch-remote-resources --profile xccdf_org.ssgproject.content_profile_pci-dss --results /tmp/scan-xccdf-results.xml /usr/share/xml/scap/ssg/content/ssg-rhel9-ds.xml
+....
 
-. Verify the host system release 
+____
+*NOTE:* This scan can take a few minutes to complete as it has to
+evaluate all the rules, and generate a XML file that has the results.
+____
 
-+
-[source,bash]
-----
-cat /etc/redhat-release
-----
-+ 
-NOTE: The `bastion` system is Red Hat Enterprise Linux 9, and when you built the previous container, you used the UBI9 image. This means both the image and the container were built off the same Red Hat Enterprise Linux packages. 
+Once the scan completes, you can look at the pass/fail status of each
+rule in the output -
 
-. As we did previously in this lab, Use `buildah from` to pull down the Red Hat Enterprise Linux 8 UBI.
+Downloading:
+https://access.redhat.com/security/data/oval/v2/RHEL9/rhel-9.oval.xml.bz2
+… ok — Starting Evaluation —
 
-+
-[source,bash]
-----
-buildah from registry.access.redhat.com/ubi8/ubi
-----
+…
 
-NOTE: Because you already pulled one image named `ubi-working-container` this one is called `ubi-working-container-1`. 
+Title Ensure Software Patches Installed Rule
+xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
+CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226913 OVAL
+Definition Title RHSA-2022:6913: .NET 6.0 security and bugfix update
+(Moderate) Result pass
 
-[#prerequisites]
-== Install Prerequisites
+Title Ensure Software Patches Installed Rule
+xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
+CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226854 OVAL
+Definition Title RHSA-2022:6854: gnutls and nettle security, bug fix,
+and enhancement update (Moderate) Result pass
 
-Now that you have a working container, you will use the same process as before installing all the prerequisites, changing config files, and manipulating the contents of this container to be in the desired state.
+Title Ensure Software Patches Installed Rule
+xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
+CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226839 OVAL
+Definition Title RHSA-2022:6839: squid security update (Important)
+Result pass
 
-The software you will install is a JavaScript-based game that runs on a web browser. As before in the lab, use dnf to install software inside the container. 
+Title Ensure Software Patches Installed Rule
+xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
+CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226838 OVAL
+Definition Title RHSA-2022:6838: expat security update (Important)
+Result pass
 
-. Use `buildah run` and install Apache (`httpd`) into the `ubi-working-container-1` container. 
-+
-[source,bash]
-----
-buildah run ubi-working-container-1 -- dnf -y install httpd
-----
+Title Ensure Software Patches Installed Rule
+xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
+CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226763 OVAL
+Definition Title RHSA-2022:6763: bind security update (Important) Result
+pass
 
-== Enable Service
+Title Ensure Software Patches Installed Rule
+xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
+CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226717 OVAL
+Definition Title RHSA-2022:6717: thunderbird security update (Important)
+Result pass
 
-The next thing to do is to use a systemctl to enable the service. The ubi-init provides full systemd service to the container.
-This will start up any of the services that are enabled. 
+…
 
-. Enable the `httpd` service using `buildah run`
+<< OUTPUT ABRIDGED >>
 
-+
-[source,bash]
-----
-buildah run ubi-working-container-1 -- systemctl enable httpd
-----
+....
 
-NOTE: The UBI standard image doesn't have systemd installed on it by default. The `ubi-init` container image does include systemd. Plan accordingly to which image you use to build applications.  
 
-== Explore Source Materials
+The XML results file can be transformed into HTML or plain-text format for easier readability -
+....
 
-A GitHub repository has already been synchronized to `/home/devops/clumsy-bird/` This repository contains the configurations for your application.
+oscap xccdf generate report /tmp/scan-xccdf-results.xml >
+/var/www/html/index.html ```
 
-. Verify the repository is cloned inside the `/home/devops/` directory
-+
-[source,bash]
-----
-cd /home/devops/
-----
+Now that the HTML report is generated, you can check the _OpenSCAP
+Report_ tab of this lab interface to view the results (You may need to
+refresh the OpenSCAP Report tab using the refresh button at the
+upper-right of the instruqt tab).
 
-+
-[source,bash]
-----
-git clone https://github.com/ellisonleao/clumsy-bird
-----
-+
-NOTE: The output states that the software has already been checked out. 
-+
-. Explore the JavaScript contents, index files, and everything else that we need for this web-based JavaScript software.
-+
-[source,bash,role=execute]
-----
-ls clumsy-bird
-----
+.OpenSCAP-Report
+image::Openscan-Report-Fail.png[OpenSCAP-Report]
 
-== Add Source Materials to Container
+In the report, you will notice that several rules have failed. If you
+scroll to the bottom of the HTML report, you will find a failed rule
+related to _IPSec Support_. If you click the failed rule, you can get
+more details including the Rule ID, severity and description.
 
-. Now that you have verified the source materials exist, you will put the software inside of my container image using the `buildah copy` command.
-+
-[source,bash]
-----
-buildah copy ubi-working-container-1 clumsy-bird /var/www/html
-----
+.OpenSCAP-Report-Details
+image::Openscan-Report-Fail-Details.png[OpenSCAP-Report-Details]
 
-[#container]
-== Enable Container in Background
-
-In the previous section of this lab, you ran the game natively through interactive mode. Because you are now building a web application you will need to run the container in the background and access it through a web address. 
-
-. Execute `buildah config` to specify a port and initialize the container. 
-
-+
-[source,bash]
-----
-buildah config --port 80 --cmd "/usr/sbin/init" ubi-working-container-1
-----
-
-NOTE: The command makes a configuration change to this container. I'm configuring this container to accept connections to its port 80. When the container starts up, it should run the init command, which, in this case, is going to be the Apache daemon right from earlier when I enabled it.
-
-== Commit Container and Deploy
-
-. Now that we have a container in a working configured state, it is time to make that permanent by committing it to a container image called `clumsy-bird`
-+
-[source,bash]
-----
-buildah commit ubi-working-container-1 clumsy-bird
-----
-
-. Verify that the image was created with `podman`
-+
-[source,bash]
-----
-podman images
-----
-+
-. Run the container Now it's time to run the container. 
-+
-[source,bash]
-----
-podman run -d -p 8500:80 clumsy-bird
-----
-
-== Verify Application
-
-Verify that the application is running by navigating to
-
-http://bastion.{guid}.example.opentlc.com:8500
-
+Take a note of the Rule ID for this failed rule as it will be used in
+the next step.
