--- a/content/modules/ROOT/pages/module-03.adoc
+++ b/content/modules/ROOT/pages/module-03.adoc
@@ -8,72 +8,26 @@ To start scanning using OpenSCAP, use the _oscap xccdf eval_ command
 with the profile Id, option to fetch remote resources, output XML
 results file, and the datastream file.
 
-....
+[source,bash,run]
+----
 oscap xccdf eval --fetch-remote-resources --profile xccdf_org.ssgproject.content_profile_pci-dss --results /tmp/scan-xccdf-results.xml /usr/share/xml/scap/ssg/content/ssg-rhel9-ds.xml
-....
+----
 
 ____
-*NOTE:* This scan can take a few minutes to complete as it has to
+[!NOTE] This scan can take a few minutes to complete as it has to
 evaluate all the rules, and generate a XML file that has the results.
 ____
 
 Once the scan completes, you can look at the pass/fail status of each
 rule in the output -
 
-Downloading:
-https://access.redhat.com/security/data/oval/v2/RHEL9/rhel-9.oval.xml.bz2
-… ok — Starting Evaluation —
+The XML results file can be transformed into HTML or plain-text format
+for easier readability -
 
-…
-
-Title Ensure Software Patches Installed Rule
-xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
-CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226913 OVAL
-Definition Title RHSA-2022:6913: .NET 6.0 security and bugfix update
-(Moderate) Result pass
-
-Title Ensure Software Patches Installed Rule
-xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
-CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226854 OVAL
-Definition Title RHSA-2022:6854: gnutls and nettle security, bug fix,
-and enhancement update (Moderate) Result pass
-
-Title Ensure Software Patches Installed Rule
-xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
-CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226839 OVAL
-Definition Title RHSA-2022:6839: squid security update (Important)
-Result pass
-
-Title Ensure Software Patches Installed Rule
-xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
-CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226838 OVAL
-Definition Title RHSA-2022:6838: expat security update (Important)
-Result pass
-
-Title Ensure Software Patches Installed Rule
-xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
-CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226763 OVAL
-Definition Title RHSA-2022:6763: bind security update (Important) Result
-pass
-
-Title Ensure Software Patches Installed Rule
-xccdf_org.ssgproject.content_rule_security_patches_up_to_date Ident
-CCE-84185-8 OVAL Definition ID oval:com.redhat.rhsa:def:20226717 OVAL
-Definition Title RHSA-2022:6717: thunderbird security update (Important)
-Result pass
-
-…
-
-<< OUTPUT ABRIDGED >>
-
-....
-
-
-The XML results file can be transformed into HTML or plain-text format for easier readability -
-....
-
-oscap xccdf generate report /tmp/scan-xccdf-results.xml >
-/var/www/html/index.html ```
+[source,bash,run]
+----
+oscap xccdf generate report /tmp/scan-xccdf-results.xml > /var/www/html/index.html
+----
 
 Now that the HTML report is generated, you can check the _OpenSCAP
 Report_ tab of this lab interface to view the results (You may need to
