--- a/content/modules/ROOT/pages/module-04.adoc
+++ b/content/modules/ROOT/pages/module-04.adoc
@@ -5,7 +5,7 @@ IPSec support. In this step, you will remediate a single failed rule
 related to IPSec support.
 
 ____
-*NOTE*: Many of the remediations involve restarting the host, and the
+[!NOTE] Many of the remediations involve restarting the host, and the
 current demo environment does not support host reboots yet. Thus, this
 lab will focus only on remediating a single issue.
 ____
@@ -16,44 +16,18 @@ step (_xccdf_org.ssgproject.content_rule_package_libreswan_installed_)
 to remediate the specific rule. If no Rule ID is provided, oscap
 attempts to remediate all the failed rules.
 
-....
+[source,bash,run]
+----
 oscap xccdf eval --profile xccdf_org.ssgproject.content_profile_pci-dss --remediate --fetch-remote-resources --results scan-xccdf-results.xml --rule xccdf_org.ssgproject.content_rule_package_libreswan_installed /usr/share/xml/scap/ssg/content/ssg-rhel9-ds.xml
-....
+----
 
-— Starting Evaluation —
+To verify that the issue is remediated, re-run the previous command.
+Oscap only attempts to fix what is broken, so it will not remediate an
+already fixed rule.
 
-Title Install libreswan Package Rule
-xccdf_org.ssgproject.content_rule_package_libreswan_installed Ident
-CCE-84068-6 Result fail
-
-— Starting Remediation —
-
-Title Install libreswan Package Rule
-xccdf_org.ssgproject.content_rule_package_libreswan_installed Ident
-CCE-84068-6 Result fixed
-
-....
-
-To verify that the issue is remediated, re-run the previous command. Oscap only attempts to fix what is broken, so it will not remediate an already fixed rule.
-....
-
-oscap xccdf eval –profile xccdf_org.ssgproject.content_profile_pci-dss
-–remediate –fetch-remote-resources –results scan-xccdf-results.xml –rule
-xccdf_org.ssgproject.content_rule_package_libreswan_installed
-/usr/share/xml/scap/ssg/content/ssg-rhel9-ds.xml
-
-....
-
-<pre class="file">
---- Starting Evaluation ---
-
-Title   Install libreswan Package
-Rule    xccdf_org.ssgproject.content_rule_package_libreswan_installed
-Ident   CCE-84068-6
-Result  pass
-
-
---- Starting Remediation ---
-....
+[source,bash,run]
+----
+oscap xccdf eval --profile xccdf_org.ssgproject.content_profile_pci-dss --remediate --fetch-remote-resources --results scan-xccdf-results.xml --rule xccdf_org.ssgproject.content_rule_package_libreswan_installed /usr/share/xml/scap/ssg/content/ssg-rhel9-ds.xml
+----
 
 The remediation starts but there is no work left to be done.
